rust/crates/arbor/tests/snapshots/test__render_tree_with_complex_unicode1.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
node 1
root
├── node 1.1
├── node 1.2
├── node 1.3
│   ├── node 1.3.1
│   │   ╰── node
│   │       1.3.1.1
│   ├── node 1.3.2
│   ╰── node 1.3.3
│       ├── node
│       │   1.3.3.1
│       ╰── node
│           1.3.3.2
╰── node 1.4
    ├── node 1.4.1
    ├── node 1.4.2
    ╰── node 1.4.3
        ├── node
        │   1.4.3.1
        ╰── node
            1.4.3.2
