rust/crates/arbor/tests/snapshots/test__render_tree_with_fixed_line.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
textwrap1: an efficient
and powerful library for
wrapping text.
├── textwrap2: an efficient
│   and powerful library for
│   wrapping text.
╰── textwrap3: an efficient
    and powerful library for
    wrapping text.
