rust/crates/arbor/tests/snapshots/test__render_tree_with_multiple_leaves.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
foo
├── bar
╰── baz
