rust/crates/arbor/tests/snapshots/test__render_tree_with_multiple_lines_normal.snap
---
source: crates/arbor/tests/test.rs
expression: "format!(\"{}\", render)"
---
foo
foo
├── bar
│   bar
│   bar
│   bar bar bar bar
╰── baz
